# ppd

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
app/: lib.py  main.py  ui.py
app/tabs/: __init__.py  common.py  formulas.py  losses.py  measures.py  new_object.py  overview.py  quality.py  scheme.py  working_point.py
config/: constraints.yaml  fluids.yaml  verification.yaml
config/plants/: dns7s.yaml  kns10bn.yaml  kns129ln.yaml  kns138ln.yaml  kns14an.yaml  kns154bn.yaml  kns155bn.yaml  kns155tbn.yaml  kns175.yaml  kns25.yaml  kns85en.yaml  knsopu.yaml
config/topology/: dns7s.yaml  kns154bn.yaml  kns25.yaml
data/raw/: #U0414#U041d#U0421-7#U0441 #U043e#U0431#U044a#U0435#U043c #U043f#U0435#U0440#U0435#U043a#U0430#U0447#U043a#U0438.xlsx  #U041a#U043e#U043f#U0438#U044f #U0414#U041d#U0421-7#U0441 #U0414#U041d.xlsx  #U0420#U0435#U0435#U0441#U0442#U0440 #U0411#U0412_#U0422#U0412.xlsx  ntu
docs/: audit_findings.md  formula_map.md  verification.md
src/ppd_audit/: config.py  decomposition.py  models.py  spec.py  spec_io.py  units.py
src/ppd_audit/core/: __main__.py  audit.py  curves.py  hydraulics.py  motor.py  nodes.py  pump.py  specific_energy.py  wells.py  zra.py
src/ppd_audit/ingest/: __main__.py  pipeline.py  readers.py  report_calc.py
src/ppd_audit/measures/: __init__.py  registry.py
src/ppd_audit/optimize/: __init__.py  setpoints.py
tests/: test_app.py  test_app_tabs.py  test_chain.py  test_core.py  test_dns7s.py  test_ingest.py  test_quality.py  test_units.py
tests/verification/: test_objects.py
(+10 files in other folders)
